<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResponseActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/text_tittle_result"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_user"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toTopOf="@+id/text_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Nelson Geovanny Peña Agudelo" />

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/textView15"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout6"
                app:layout_constraintStart_toStartOf="@+id/linearLayout6">

                <TextView
                    android:id="@+id/text_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/grayText"
                    tools:text="No. 1052397144" />

                <TextView
                    android:id="@+id/text_document"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/grayText"
                    tools:text="Documento: Cédula de ciudadanía" />

                <TextView
                    android:id="@+id/text_date_of_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/grayText"
                    tools:text="Fecha nacimiento: 20/07/1992" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/text_sub_tittle_result"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
                app:layout_constraintStart_toStartOf="@+id/linearLayout5" />

            <Button
                android:id="@+id/btnFinish"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:layout_weight="1"
                android:text="@string/text_finish"
                android:textColor="@color/white"
                app:backgroundTint="@color/accentColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/btnFinish"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/imageView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/biometric_icon" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textBiometric"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:autoSizeMaxTextSize="16dp"
                            android:autoSizeMinTextSize="5sp"
                            android:autoSizeStepGranularity="2sp"
                            android:autoSizeTextType="uniform"
                            android:text="@string/text_bio_result"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/imgChkBiometric"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/check_icon" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/imageView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ateration_icon" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textDectect"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:autoSizeMaxTextSize="16dp"
                            android:autoSizeMinTextSize="5sp"
                            android:autoSizeStepGranularity="2sp"
                            android:autoSizeTextType="uniform"
                            android:text="@string/text_detection_result"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/imgChkDetection"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/check_icon" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/imageView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/watchlists_icon" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textList"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:autoSizeMaxTextSize="16dp"
                            android:autoSizeMinTextSize="5sp"
                            android:autoSizeStepGranularity="2sp"
                            android:autoSizeTextType="uniform"
                            android:text="@string/text_list_result"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/imgChkList"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/facil_icon" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/imageView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/template_icon" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textRevision"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:autoSizeMaxTextSize="16dp"
                            android:autoSizeMinTextSize="5sp"
                            android:autoSizeStepGranularity="2sp"
                            android:autoSizeTextType="uniform"
                            android:text="@string/text_revision_result"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/imgChkRevision"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/check_icon" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>